--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </a>
         </div>
         <h3>Project One</h3>
-        <p>A modern React app showcasing animated transitions and responsive layouts.</p>
+        <p>Advanced ToDo app with sections like My Day, Important, and Planned. Features task filtering, priority tags, calendar view, smooth animations with Framer Motion, and interactive UI built with React.</p>
     </div>
 
     <div class="project" data-aos="fade-up">
@@ -76,7 +76,7 @@
         </a>
         </div>
         <h3>Project Two</h3>
-        <p>A portfolio site with custom fonts, minimal design, and clean CSS architecture.</p>
+        <p>Responsive bike landing page featuring smooth CSS animations, modern layout, interactive scroll effects, and clean UI design. Built with HTML, CSS, and vanilla JavaScript.</p>
     </div>
 
     <div class="project" data-aos="fade-up">
@@ -86,7 +86,7 @@
         </a>
         </div>
         <h3>Project Three</h3>
-        <p>Interactive portal built with GSAP animations and mobile responsiveness.</p>
+        <p>Animated AirPods landing page powered by GSAP. Includes smooth scroll-triggered transitions, dynamic image animations, and responsive layout. Built with HTML, CSS, JavaScript, and GSAP.</p>
     </div>
     </section>
 
