--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <a href="https://t.me/alnurch" target="_blank">
         <i class="fab fa-telegram"></i>
     </a>
-    <a href="https://www.linkedin.com/in/alnur-kengesbay-4929892b1/" target="_blank">
+    <a href="https://www.linkedin.com/in/alnur-kengesbay/" target="_blank">
         <i class="fab fa-linkedin"></i>
     </a>
     <a href="https://github.com/alnurkengesbay" target="_blank">
