--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
-    <a href="#" class="cv-btn">Download CV</a>
   </header>
 
   <section class="hero">
     <h1>Alnur Kengesbay</h1>
     <h2>Frontend Developer.</h2>
     <div class="hero-buttons" data-aos="fade-up">
-      <a href="#" class="btn">Download CV</a>
+      <a href="#projects" class="btn">Projects</a>
       <a href="#contact" class="btn secondary">Contact</a>
     </div>
   </section>
